# ChangeLog for sci-astronomy/stiff
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/stiff/ChangeLog,v 1.7 2011/08/04 18:33:30 bicatali Exp $

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> stiff-9999.ebuild, metadata.xml:
  Move to EAPI=5 and autotools-utils

*stiff-9999 (09 Jul 2012)

  09 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> +stiff-9999.ebuild,
  +files/stiff-configure.patch, +metadata.xml:
  Added live version, fixed for respecting flags, keyword amd64-linux,
  x86-linux

  04 Aug 2011; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml:
  Switched herd to sci-astronomy

*stiff-2.1.3 (10 Apr 2011)

  10 Apr 2011; Sébastien Fabbro <bicatali@gentoo.org> -stiff-1.12.ebuild,
  +stiff-2.1.3.ebuild:
  Version bump

  08 Nov 2010; Kacper Kowalik <xarthisius@gentoo.org> stiff-2.1.2.ebuild:
  media-libs/jpeg -> virtual/jpeg

*stiff-2.1.2 (26 Feb 2010)

  26 Feb 2010; Sébastien Fabbro <bicatali@gentoo.org> -stiff-1.10.ebuild,
  +stiff-2.1.2.ebuild:
  Version bump

  28 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org> stiff-1.12.ebuild:
  Updated license to CeCILL-2

*stiff-1.12 (28 Jul 2009)

  28 Jul 2009; Sébastien Fabbro <bicatali@gentoo.org> +stiff-1.12.ebuild,
  +files/stiff-configure.patch:
  Version bump

*stiff-1.10 (17 Feb 2009)

  17 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org> +metadata.xml,
  +stiff-1.10.ebuild:
  Initial import to the main tree from the sci overlay

  26 Mar 2007; Sébastien Fabbro <bicatali@gentoo.org> stiff-1.10.ebuild:
  cleaning

  29 Dec 2006; Sebastien Fabbro <seb@ist.utl.pt>;
  Removed icc flag, too buggy.

  19 Sep 2006; Sebastien Fabbro <seb@ist.utl.pt> +stiff-1.10.ebuild:
  Initial import.
