@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-  <herd>sci-astronomy</herd>
-  <longdescription lang="en">
+<herd>sci-astronomy</herd>
+<longdescription lang="en">
   STIFF is a program that convert scientific FITS images to the
   more popular TIFF, in 8 (grayscale) or 24 (true colour: 3 times 8) bits per
   pixel.
